# figures

./: CMakeLists.txt  centoid.c  cheatsheat  libattopng.c  libattopng.h  line.c  line.h  main.c  rectangle.c  rectangle.h  triangle.c  triangle.h  types.h
